--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,143 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+h3.resource-title{
+  font-weight: bold;
+  font-style: italic !important;
+}
+.product-group-block>ul>li>a{
+  font-size: 1.2em;
+}
+ul.nav.navbar-nav>li>a{
+  font-size: 1.5em !important;
+}
+a.navbar-brand{
+  font-size: 2em;
+}
+ul.dropdown-menu>li>a{
+  background-color: black;
+  color: white;
+  font-size:1.4em;
+}
+ul.dropdown-menu{
+  padding: 0px;
+}
+.panel-default{
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  font-size:1.5em;
+}
+.panel{
+  border-radius: 10px;
+}
 
+body {
+  font-family: 'Lato'; 
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.panel{
+    border: 0px;
+    -moz-box-shadow: 1px 2px 30px rgba(0,0,0,1);
+    -webkit-box-shadow: 1px 2px 30px rgba(0,0,0,1);
+    box-shadow: 0px 0px 30px rgba(0,0,0,1);
+}
+
+.product-group-block{
+  -moz-box-shadow: 1px 2px 30px rgba(0,0,0,1);
+    -webkit-box-shadow: 1px 2px 30px rgba(0,0,0,1);
+    box-shadow: 0px 0px 30px rgba(0,0,0,1);
+    background-color: lightyellow;
+}
+
+.fa-btn {
+    margin-right: 6px;
+}
+
+a.back-to-top {
+    display: none;
+    width: 60px;
+    height: 60px;
+    text-indent: -9999px;
+    position: fixed;
+    z-index: 999;
+    right: 20px;
+    bottom: 20px;
+    background: goldenrod url("../img/up-arrow.png") no-repeat center 43%;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+}
+a:hover.back-to-top {
+    background-color: #000;
+}
+#home-img{
+  height: 340px;
+}
+.home-img-overlay{
+    position: absolute;
+    max-width: 360px;
+    background-color: rgba(0,0,0, 0.5);
+    border-radius:5px;
+    color: lightyellow;
+    font-size: 30px;
+    padding: 10px;
+    font-style: italic;
+    font-weight: bold;
+    text-shadow: 3px 3px #000;
+    margin: 40px 50px;
+}
+.home-text{
+    font-size: 20px;
+}
+.home-text-title{
+    font-style: italic;
+    text-align: center;
+}
+.home-text-title h3{
+    color: red;
+    font-weight: bold;
+}
+.product-img-title{
+    font-size: 20px;
+    text-align: center;
+    height: 60px;
+    color: red;
+    font-weight: bold;
+    border-bottom: 1px solid #aaa;
+}
+.product-group-block>a:hover{
+    text-decoration: none;
+}
+.product-group-block>ul>li>a:hover{
+    text-decoration: none;
+    background-color: yellow;
+}
+.product-img{
+  height: 200px;
+}
+.product-img>img{
+    height: 100%;
+    width: 100%;
+    opacity: .5;
+}
+.product-img>img:hover{
+    opacity: 1;
+}
+
+.product-item-img>img{
+    width: 70%;
+    margin: auto;
+}
+.product-item-heading{
+    font-weight: bold;
+    font-size: 20px;
+    color: #23527c !important;
+    background-color: lightyellow !important;
+    text-align: center;
+}
+
+.footer-text{
+    color: #aaa;
+    margin-bottom: 0px;
+}
+#app-layout>.container{
+    min-height: 800px;
+}
